--- a/templates/routes.html
+++ b/templates/routes.html
@@ -4,7 +4,7 @@
 
 <!-- Hero Section -->
 <section class="hero-section">
-    <h2>Nové Přelezy</h2>
+    <h2>Poslední Přelezy</h2>
 </section>
 
 <!-- Climbers Routes Section -->
